<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/quran_menu"
        android:title="@string/quran"
        android:icon="@drawable/ic_local_library"/>

    <item
        android:id="@+id/ustadz_menu"
        android:title="@string/ustadz"
        android:icon="@drawable/ic_supervisor"/>
    <item
        android:id="@+id/schedule_menu"
        android:title="@string/schedule"
        android:icon="@drawable/ic_event_note"/>

    <item
        android:id="@+id/certificate_menu"
        android:title="@string/certificate"
        android:icon="@drawable/ic_list_check"/>

</menu>