<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/quransettings">
        <ListPreference
            android:title="@string/arabicfont"
            android:summary="@string/arabicfontsummary"
            android:key="arabicFont"
            android:defaultValue="fonts/kfc_naskh-webfont.otf"
            android:entries="@array/listFont"
            android:entryValues="@array/listFontValues" />
        <ListPreference
            android:title="@string/arabicfontsize"
            android:summary="@string/arabicfontsizesummary"
            android:key="arabicFontSize"
            android:defaultValue="Sedang"
            android:entryValues="@array/listFontSizeValues"
            android:entries="@array/listFontSize"
           />
        <CheckBoxPreference
            android:title="@string/translation"
            android:defaultValue="true"
            android:summary="@string/translationsummary"
            android:key="translation" />
        <ListPreference
            android:title="@string/translationlang"
            android:summary="@string/translationsummary"
            android:key="arabicFontSize"
            android:defaultValue="en"
            android:entryValues="@array/listLanguageValues"
            android:entries="@array/listLanguage"
            />
        <!--<EditTextPreference-->
            <!--android:title="Your Name"-->
            <!--android:key="username"-->
            <!--android:summary="Please provide your username"/>-->


    </PreferenceCategory>

</PreferenceScreen>