<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daftar"
    android:orientation="vertical">

    <EditText
        android:id="@+id/namaTxt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/fullname"
        android:inputType="text"
        android:layout_marginTop="@dimen/stdMargin2"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/stdMargin1"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2" />

    <EditText
        android:id="@+id/usernameTxt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:inputType="textShortMessage"
        android:layout_marginTop="@dimen/stdMargin1"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/stdMargin4"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2" />

    <EditText
        android:id="@+id/password2Txt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/repeatpassword"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/stdMargin1"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2" />


    <Button
        android:id="@+id/daftarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/stdMargin2"
        android:layout_marginLeft="@dimen/stdMargin2"
        android:layout_marginTop="@dimen/stdMargin1"
        android:layout_marginEnd="@dimen/stdMargin2"
        android:layout_marginRight="@dimen/stdMargin2"
        android:layout_marginBottom="@dimen/stdMargin2"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/colorNavigationText"/>

</LinearLayout>